<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RelinkRemoteControl</string>
    <string name="title_activity_main">RelinkRemoteControl</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_change_volume">Change volume</string>
    <string name="lbl_volume_type">Volume type</string>
    <string name="lbl_volume_level">Volume level</string>
    <string name="btn_register">Register</string>

    <string name="error_email_address">The email address is not valid.</string>
    <string name="enable_bluetooth">Enable bluetooth</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>
    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="btn_scan">Scan</string>
    <string name="btn_select_device">Select device</string>
    <string name="btn_send_via_bt">Send via Bluetooth</string>

    <string-array name="volume_types">
        <item>System</item>
        <item>Media</item>
        <item>Alarm</item>
        <item>Ring</item>
    </string-array>

    <string-array name="volume_levels">
        <item>Silent</item>
        <item>Vibrate</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>Max</item>
    </string-array>


</resources>
